Adjust api-url method to new url